style.css
/*!
Theme Name: Narrative Map Theme
Theme URI: http://underscores.me/
Author: Jeff Everhart, Tom Woodward
Author URI: http://underscores.me/
Description: Custom theme: Narrative Map Theme, developed by Jeff Everhart, Tom Woodward
Version: 1.0.0
License: GNU General Public License v2 or later
License URI: LICENSE
Text Domain: narrative-map-theme
Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready

This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned with others.

Narrative Map Theme is based on Underscores https://underscores.me/, (C) 2012-2017 Automattic, Inc.
Underscores is distributed under the terms of the GNU GPL v2 or later.

Normalizing styles have been helped along thanks to the fine work of
Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
*/
/*--------------------------------------------------------------
>>> TABLE OF CONTENTS:
----------------------------------------------------------------
# Normalize
# Typography
# Elements
# Forms
# Navigation
	## Links
	## Menus
# Accessibility
# Alignments
# Clearings
# Widgets
# Content
	## Posts and pages
	## Comments
# Infinite scroll
# Media
	## Captions
	## Galleries
--------------------------------------------------------------*/

/* Override Rampages Privacy Policy */

#private {
  display: none !important;
}

/* Start of Custom Map Code */

body, html {
  height: 100%;
  /* background: #455a64; */
}
.container-fluid {
  padding: 0;
}

.site-wrapper {
  position: relative;
  margin: 0;
  height: 100%;
}


.side-nav {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  background: #455a64;
  width: 85px;
  padding-left: 0;
  padding-right: 0;
  z-index: 15000;
}

.side-nav nav {
  background: #455a64;
}
.side-nav nav ul {
  list-style-type: none;
  color: white;
  padding: 0;
}

.side-nav nav ul hr {
  background-color: white;
  margin: 0;
}

.side-nav nav ul li {
  display: inline-block;
  text-align: center;
  width: 100%;
  min-height: 65px;
  padding: 5px 0 0 0;
}

.side-nav nav ul li:hover {
  background-color: black;
}

.side-nav nav ul li:hover i {
  transform: translateY(-2px);
}

.side-nav nav ul li a {
  display: inline-block;
  height: 100%;
  width: 100%;
  color:white;
  text-decoration: none;
}

.side-nav nav ul li a:hover {
  text-decoration: none;
}

.side-nav nav ul li a p {
  font-size: 14px;
}

.map,
.front-page
{
  height: 100%;
  position: absolute;
  top: 0;
  left: 85px;
}

#map,
#front-page {
  height: 100vh;
  width: calc(100vw - 85px);
  background-color: #fff;
}
.map .full-page {
  background-color: #fff;
  height: 100%;
}
.map .card {
  width: 50vw;
  z-index: 10000;
  text-align:center;
}

.map-ui-row {
  position: fixed;
  top: 12px;
  z-index: 10000;
}

body.logged-in .map-ui-row,
body.logged-in .modal.show
{
  margin-top: 46px;
}

.point-list {
  position: fixed;
  overflow-y: scroll;
  height: 100%;
  padding-left: 85px;
  z-index: 10000;
  display: block;
}

.point-list ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}
.point-tile {
  height: 20%;
  background-color: rgba(0, 0, 0, 0.7);
  border-bottom: solid 1px #CCC;
  color: #FFF;
  padding: 15px;
}

.point-tile:first-of-type {
  padding-top: 3rem;
}

.point-tile:last-of-type {
  padding-bottom: 4rem;
}

.point-tile a {
  cursor: pointer;
}


.modal.show {
  padding-left: 85px;
}

.main-post {
  z-index: 9999;
  height: 100vh;
  padding-left: 85px;
  background-color: #fff;
  overflow-y: scroll;
}
.main-post .post-content {
  padding: 3rem 1rem 1rem 3rem;
}
/* Override for Fixed Map */

.map.fixed-right {
  position: absolute;
  right: 0;
  top: 0;
  left: auto;
  width: 525px;
}

.map.fixed-right #map {
  position: absolute;
  width: 525px;
}

/* Override for Modal */

.modal {
  z-index: 16050;
}

/* Styles for Front Page */

#front-page {
  text-align: center;
  color: white;
}

#front-page {
  background: linear-gradient(
      rgba(0, 0, 0, 0.75),
      rgba(0, 0, 0, 0.75)
    ),
    url(https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/VCU_East_on_Broad_by_Jeff_Auth.jpg/1200px-VCU_East_on_Broad_by_Jeff_Auth.jpg);
  background-size: cover;

}

#front-page h1 {
  font-size: 5rem;
}

#front-page h2 {
  font-size: 3.5rem;
}

#front-page p {
  font-size: 2rem;
}

li a .fa-map-marker:first-of-type {
  color: purple;
}

li a .fa-map-marker {
  color: green;
}

li a .fa-map-marker {
  color: blue;
}

/* Utility Styles */

.small {
  font-size: .75rem!important;
}

/*leaflet tweaks*/

.leaflet-popup-content img {
  margin-bottom: .3em;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.leaflet-popup-content .btn-primary {
  background-color: #fff;
}

.leaflet-popup-content .btn-primary:hover {
  background-color: #efefef;
}

.leaflet-container a {
  color: #007bff !important;
}

.leaflet-popup-content-wrapper {
  border-radius: 6px !important;
}


/* Non-map content */

div#primary {
  margin-left: 85px;
}

#main {
  padding: 1.5em;
}

.content-container {
  margin-left: 85px;
  background: #fff;
  height: 100vh;
  /* overflow-x: hidden; */
}

/*single location*/
.single-location .entry-content{
  margin-left: 100px;
}
.pastor {
  font-size: 1.3em;
}


/* Narrative Scrolly Section */

.narrative-title-section {
  padding: 15%;
  text-align: center;
  margin-bottom: 2em;
  background: url(https://i.etsystatic.com/11512024/r/il/0ccd88/1345461763/il_794xN.1345461763_h8sk.jpg) no-repeat center center fixed;
  background-size: cover;
}

.narrative-title-section .title-container {
  padding: 10%;
  /* border: 1px solid rgba(105,105,105,1); */
  background: #fff;
  -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);
}

#narrative-section .map {
  height: 100vh;
  width: 100%;
  position: sticky;

}

#narrative-section #map {
  width: 100%;
  height: 100%;
}

#narrative-section .step {
  min-height: 500px;
}

#narrative-section .row {
  margin-left: 0;
}

/* Legends */

.legend.info {
  background-color: #fff;
  min-width: 80px;
  min-height: 100px;
  border: 1px solid grey;
  padding: 1em;
}

.legend i {
  width: 18px;
  height: 18px;
  float: left;
  margin-right: 8px;
  opacity: 0.8;
}

